Categories tree based on supplier ids list
