# src/dto/models/GetCategoriesTreeRequest.ts
@@ -12,6 +12,7 @@ export type GetCategoriesTreeRequest = {
      * List of supplier IDs
      */
     supplierIds: Array<string>;
+    visibility?: number;
     /**
      * Language code
      */
